fix: fix pom.xml. Trying to do too many things at once